--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>My Website</title>
-    <link rel="stylesheet" href="styles/styles.css">
-</head>
-<body>
+<%-  include("partials/header.ejs") %>
+
     <h1>Welcome to My Website</h1>
     <p>This is the homepage of my website.</p>
-</body>
-</html>
+
+<%- include("partials/footer.ejs") %>
