--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,3 +1,69 @@
-body{
-    background-color: aqua;
+:root{
+    font-size: 16px;
+    font-family:"Nunito Sans";
+    color: #5EBEC4;
+
 }
+
+body{
+    background-color: #FDF5DF;
+    margin: 0px;
+    padding: 0px;
+}
+
+.navbar {
+    height: 5rem;       
+    width: 100vw;   
+    top:0px;   
+    position: fixed;
+}
+
+.navbar-nav {
+    font-family: "Playwrite HU";
+    list-style-type: none; 
+    padding: 0;             
+    margin: 0;              
+    display: flex;
+    align-items: center;            
+}
+
+.nav-item:last-child {
+    margin-left: auto;
+}
+
+/* .nav-item{
+    padding: 0.1rem;
+    background-color: #F92C85;
+    border: 12px solid #F92C85;
+    border-radius: 10px;
+} */
+
+.logo{
+    font-size: 1.5rem;
+}
+
+main{
+    margin-top: 2rem;
+    padding: 3rem;
+}
+
+footer{
+    padding-left: 3rem;
+}
+
+body::-webkit-scrollbar {
+    width: 0.5rem;
+}
+
+body::-webkit-scrollbar-track {
+    background: #5EBEC4;
+}
+
+body::-webkit-scrollbar-thumb {
+    background: #F92C85;
+}
+
+
+
+
+
