--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,22 @@
 <html>
 <head>
     <title>My Website</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+HU:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
+    
 </head>
-<header></header>
-<main class = "container">
+<body>
+    <header class = "navbar">
+        <ul class = "navbar-nav">   
+            <li class = "nav-item logo">
+                <a href = "/" class = "nav-link">CodingWithAnirudh</a>
+            </li>
+            <li class = "nav-item">
+                <a href = "/about" class = "nav-link">About</a>
+            </li>
+        </ul>
+    </header>
+    <main class = "container">
