--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playwrite+HU:wght@400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
-    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
 </head>
 <body>
     <header class = "navbar">
@@ -19,5 +20,6 @@
                 <a href = "/about" class = "nav-link">About</a>
             </li>
         </ul>
+        <script src="src/navbar.js"></script>
     </header>
     <main class = "container">
