--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 </main>
 <footer>
-    <p>&copy; 2021 My Website</p>
+    <p>&copy; <%= new Date().getFullYear() %> My Website</p>
 </footer>
 </body>
 </html>
