--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playwrite+HU:wght@400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://kit.fontawesome.com/d0e2831c95.js" crossorigin="anonymous"></script>
 
 </head>
 <body>
