--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,7 @@
 <footer>
     <div class="icons">
         <!-- twitter -->
-        <a href="" class="icon">
+        <a href="" class="icon-link">
             <svg 
             xmlns="http://www.w3.org/2000/svg" 
             height="42" width="30.5" viewBox="0 0 448 512">
@@ -12,7 +12,7 @@
             </svg>
         </a>
         <!-- linked -->
-        <a href="" class="icon"> 
+        <a href="" class="icon-link"> 
             <svg 
             xmlns="http://www.w3.org/2000/svg" 
             height="40" width="38.75" viewBox="0 0 448 512">
@@ -22,7 +22,7 @@
             </svg>
         </a>
         <!-- github -->
-        <a href="" class="icon">
+        <a href="" class="icon-link">
             <svg 
             xmlns="http://www.w3.org/2000/svg" 
             height="40" width="39.6875" viewBox="0 0 496 512">
@@ -32,7 +32,7 @@
         </svg>
         </a>
         <!-- email -->
-        <a href="" class="icon">
+        <a href="" class="icon-link">
             <svg 
             xmlns="http://www.w3.org/2000/svg" 
             height="42" width="42" viewBox="0 0 512 512">
@@ -43,11 +43,11 @@
         </a>
     </div>
     <div class="links">
-        <a href="/about" class="nav-link">About</a>
-        <a href="/contact" class="nav-link">Contact</a>
+        <a href="/about" class="footer-link">About</a>
+        <a href="/contact" class="footer-link">Contact</a>
     </div>
     <p>&copy; <%= new Date().getFullYear() %> My Website</p>
 </footer>
-<script src="src.footer.js"></script>
+<script src="src/footer.js"></script>
 </body>
 </html>
