--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,13 +12,19 @@
 
 </head>
 <body>
-    <header class = "navbar">
+    <header>
         <ul class = "navbar-nav">   
             <li class = "nav-item logo">
                 <a href = "/" class = "nav-link">CodingWithAnirudh</a>
             </li>
             <li class = "nav-item">
                 <a href = "/about" class = "nav-link">About</a>
+            </li>
+            <li class = "nav-item">
+                <a href = "/blog" class = "nav-link">Blog</a>
+            </li>
+            <li class = "nav-item">
+                <a href = "/contact" class = "nav-link">Contact</a>
             </li>
         </ul>
         <script src="src/navbar.js"></script>
