Add links to footer

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -43,7 +43,9 @@
         </a>
     </div>
     <div class="links">
+        <a href="/" class="footer-link">Home</a>
         <a href="/about" class="footer-link">About</a>
+        <a href="/Blog" class="footer-link">Blog</a>
         <a href="/contact" class="footer-link">Contact</a>
     </div>
     <p>&copy; <%= new Date().getFullYear() %> My Website</p>
