--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -94,6 +94,9 @@ footer{
     border-radius: 20px;
     text-align: center;
     padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 
