--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -68,12 +68,9 @@ body::-webkit-scrollbar {
     width: 0.5rem;
 }
 
-body::-webkit-scrollbar-track {
-    background: #5EBEC4;
-}
-
 body::-webkit-scrollbar-thumb {
     background: #F92C85;
+    border-radius: 20px;
 }
 
 .icon-link{
@@ -83,6 +80,7 @@ body::-webkit-scrollbar-thumb {
 .footer-link{
     text-decoration: none;
     color: #5EBEC4;
+    padding: 0.5rem;
 }
 
 .footer-hover{
@@ -92,12 +90,51 @@ body::-webkit-scrollbar-thumb {
 footer{
     border-top: 2px solid #F92C85;
     border-radius: 20px;
-    text-align: center;
     padding: 2rem;
+    padding-bottom: 0;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
 }
+
+.foot{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.icon-link{
+    margin: 0.5rem;
+    padding: 0.3rem;
+}
+
+.hop {
+    animation: hop 0.5s;
+  }
+
+  @keyframes hop {
+    0% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-10px);
+    }
+    100% {
+      transform: translateY(0);
+    }
+  }
+
+  .fg-primary{
+    color: #5EBEC4;
+  }
+
+  .fg-secondary{
+    color: #F92C85;
+  }
+  
+
+
+
+
 
 
 
