--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,7 +24,7 @@
                 <a href = "/blog" class = "nav-link">Blog</a>
             </li>
             <li class = "nav-item">
-                <a href = "/contact" class = "nav-link">Contact</a>
+                <a href = "/projects" class = "nav-link">Projects</a>
             </li>
         </ul>
         <script src="src/navbar.js"></script>
