--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,7 @@
 <footer>
     <div class="foot icons">
         <!-- twitter -->
-        <a href="" class="icon-link">
+        <a href="https://x.com/321Anirudh" target="_blank" class="icon-link">
             <svg 
             xmlns="http://www.w3.org/2000/svg" 
             height="42" width="30.5" viewBox="0 0 448 512">
@@ -14,7 +14,7 @@
             </svg>
         </a>
         <!-- linked -->
-        <a href="" class="icon-link"> 
+        <a href="https://www.linkedin.com/in/anirudh-c-vinayan/" target="_blank" class="icon-link"> 
             <svg 
             xmlns="http://www.w3.org/2000/svg" 
             height="40" width="38.75" viewBox="0 0 448 512">
@@ -26,7 +26,7 @@
             </svg>
         </a>
         <!-- github -->
-        <a href="" class="icon-link">
+        <a href="https://github.com/AcV134" target="_blank"class="icon-link">
             <svg 
             xmlns="http://www.w3.org/2000/svg" 
             height="40" width="39.6875" viewBox="0 0 496 512">
@@ -38,7 +38,7 @@
         </svg>
         </a>
         <!-- email -->
-        <a href="" class="icon-link">
+        <a href="mailto:anirudh.c.vinayan@gmail.com" target="_blank" class="icon-link">
             <svg 
             xmlns="http://www.w3.org/2000/svg" 
             height="42" width="42" viewBox="0 0 512 512">
@@ -54,7 +54,7 @@
         <a href="/" class="footer-link">Home</a>
         <a href="/about" class="footer-link">About</a>
         <a href="/Blog" class="footer-link">Blog</a>
-        <a href="/contact" class="footer-link">Contact</a>
+        <a href="/contact" class="footer-link">Projects</a>
     </div>
     <p>&copy; <%= new Date().getFullYear() %> My Website</p>
 </footer>
