--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,4 +14,6 @@ Facilisis mauris sit amet massa vitae tortor condimentum. Commodo ullamcorper a 
 
 Urna et pharetra pharetra massa massa ultricies mi quis. Nunc scelerisque viverra mauris in aliquam sem. Pretium aenean pharetra magna ac placerat vestibulum lectus mauris ultrices. Imperdiet nulla malesuada pellentesque elit eget. Sed turpis tincidunt id aliquet risus feugiat. Libero enim sed faucibus turpis in eu mi. Bibendum enim facilisis gravida neque convallis a. Id aliquet lectus proin nibh nisl condimentum id. Leo vel orci porta non. Turpis tincidunt id aliquet risus feugiat in ante. Vel elit scelerisque mauris pellentesque pulvinar. Scelerisque fermentum dui faucibus in ornare quam viverra orci. Viverra nibh cras pulvinar mattis nunc.
     </p>
-<%- include("partials/footer.ejs") %>
+</main>
+</body>
+</html>
