--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,3 @@
-</main>
 <footer>
     <div class="foot icons">
         <!-- twitter -->
@@ -51,10 +50,10 @@
         </a>
     </div>
     <div class="foot links">
-        <a href="/" class="footer-link">Home</a>
-        <a href="/about" class="footer-link">About</a>
-        <a href="/Blog" class="footer-link">Blog</a>
-        <a href="/contact" class="footer-link">Projects</a>
+        <a href="#title" class="footer-link">Home</a>
+        <a href="#about" class="footer-link">About</a>
+        <a href="#blog" class="footer-link">Blog</a>
+        <a href="#project" class="footer-link">Projects</a>
     </div>
     <p>&copy; <%= new Date().getFullYear() %> My Website</p>
 </footer>
