--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,16 +15,16 @@
     <header>
         <ul class = "navbar-nav">   
             <li class = "nav-item logo">
-                <a href = "/" class = "nav-link">CodingWithAnirudh</a>
+                <a href = "#title" class = "nav-link">CodingWithAnirudh</a>
             </li>
             <li class = "nav-item">
-                <a href = "/about" class = "nav-link">About</a>
+                <a href = "#about" class = "nav-link">About</a>
             </li>
             <li class = "nav-item">
-                <a href = "/blog" class = "nav-link">Blog</a>
+                <a href = "#blog" class = "nav-link">Blog</a>
             </li>
             <li class = "nav-item">
-                <a href = "/projects" class = "nav-link">Projects</a>
+                <a href = "#projects" class = "nav-link">Projects</a>
             </li>
         </ul>
         <script src="src/navbar.js"></script>
