--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,5 @@
-<footer>
+<script src="src/page.js"></script>
+<footer id="contact">
     <div class="foot icons">
         <!-- twitter -->
         <a href="https://x.com/321Anirudh" target="_blank" class="icon-link">
@@ -55,7 +56,7 @@
         <a href="#blog" class="footer-link">Blog</a>
         <a href="#project" class="footer-link">Projects</a>
     </div>
-    <p>&copy; <%= new Date().getFullYear() %> My Website</p>
+    <p>&copy; <%= new Date().getFullYear() %> CodingWithAnirudh</p>
 </footer>
 <script src="src/footer.js"></script>
 </body>
