--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Website</title>
+    <title>CodingWithAnirudh</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playwrite+HU:wght@400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@100;400;900&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/d0e2831c95.js" crossorigin="anonymous"></script>
@@ -25,6 +27,9 @@
             </li>
             <li class = "nav-item">
                 <a href = "#projects" class = "nav-link">Projects</a>
+            </li>
+            <li class = "nav-item">
+                <a href = "#contact" class = "nav-link">Contact</a>
             </li>
         </ul>
         <script src="src/navbar.js"></script>
