--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,20 +13,20 @@
     <script src="https://kit.fontawesome.com/d0e2831c95.js" crossorigin="anonymous"></script>
 
 </head>
-<body>
+<body class="gradient-background">
     <header>
         <ul class = "navbar-nav">   
             <li class = "nav-item logo">
-                <a href = "#title" class = "nav-link">CodingWithAnirudh</a>
+                <a href = "#first" class = "nav-link">CodingWithAnirudh</a>
             </li>
             <li class = "nav-item">
-                <a href = "#about" class = "nav-link">About</a>
+                <a href = "#second" class = "nav-link">About</a>
             </li>
             <li class = "nav-item">
-                <a href = "#blog" class = "nav-link">Blog</a>
+                <a href = "#third" class = "nav-link">Blog</a>
             </li>
             <li class = "nav-item">
-                <a href = "#projects" class = "nav-link">Projects</a>
+                <a href = "#fourth" class = "nav-link">Projects</a>
             </li>
             <li class = "nav-item">
                 <a href = "#contact" class = "nav-link">Contact</a>
