Edit the content

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -56,7 +56,7 @@
         <a href="#blog" class="footer-link">Blog</a>
         <a href="#project" class="footer-link">Projects</a>
     </div>
-    <p>&copy; <%= new Date().getFullYear() %> CodingWithAnirudh</p>
+    <p><span style="color:#5EBEC4">&copy; <%= new Date().getFullYear() %>CodingWithAnirudh</span></p>
 </footer>
 <script src="src/footer.js"></script>
 </body>
