--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,9 +11,10 @@
     <link rel="stylesheet" href="styles/styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/d0e2831c95.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/kute.js@2.2.4/dist/kute.min.js"></script>
 
 </head>
-<body class="gradient-background">
+<body>
     <header>
         <ul class = "navbar-nav">   
             <li class = "nav-item logo">
