--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,1 +1,5 @@
-
+<h1>
+    About Me
+</h1>
+<img src="https://i.imgur.com/8Z3K1Qj.jpg" alt="profile picture" class="profile-picture">
+<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia fugit omnis, ipsa, aspernatur praesentium nulla quam sed alias vel est enim, officiis odio numquam voluptate nobis. Tempore eveniet debitis modi!</p>
