--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -3,3 +3,15 @@
 </h1>
 
 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum unde quas consequatur ex, inventore recusandae qui! Repellendus perferendis beatae doloremque! Vel, suscipit quas qui temporibus veritatis natus eos commodi cum?</p>
+
+<section class="project-container">
+    <article class="project"></article>
+    <article class="project"></article>
+    <article class="project"></article>
+    <article class="project"></article>
+    <article class="project"></article>
+    <article class="project"></article>
+    <article class="project"></article>
+    <article class="project"></article>
+</section>
+<script src="src/project.js"></script>
