Dynamically load cards

--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -23,14 +23,14 @@
 </h1>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, dolores architecto! Voluptatum, explicabo inventore iste dolorum a accusantium quibusdam sint dolore ad, qui adipisci porro, neque incidunt quia ipsum doloribus?</p>
 <section class="cards-container">
-    <article class="cards">
+    <!-- <article class="cards">
         <h1 class="cards-title">Card 1</h1>
         <p class="cards-content">This is a card.</p>
     </article>
     <article class="cards">
         <h1 class="cards-title">Card 2</h1>
         <p class="cards-content">This is a card.</p>
-    </article>
+    </article> 
     <article class="cards">
         <h1 class="cards-title">Card 3</h1>
         <p class="cards-content">This is a card.</p>
@@ -54,6 +54,6 @@
     <article class="cards">
         <h1 class="cards-title">Card 8</h1>
         <p class="cards-content">This is a card.</p>
-    </article>
+    </article> -->
 </section>
 <script src="src/blog.js"></script>
