--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,6 +1,5 @@
 <div class="wave">
-    <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
-        preserveAspectRatio="none">
+    <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
         <path
             d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z">
         </path>
@@ -11,8 +10,26 @@
     Projects
 </h1>
 
-<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum unde quas consequatur ex, inventore recusandae qui! Repellendus perferendis beatae doloremque! Vel, suscipit quas qui temporibus veritatis natus eos commodi cum?</p>
+<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum unde quas consequatur ex, inventore recusandae qui!
+    Repellendus perferendis beatae doloremque! Vel, suscipit quas qui temporibus veritatis natus eos commodi cum?</p>
 
-<section class="project-container">
-</section>
+<div class="totalproject">
+    <div class="click">
+        <svg xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 448 512" height="20"
+            width="20"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+            <path fill="currentColor"
+                d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z" />
+        </svg>
+    </div>
+    <section class="project-container">
+    </section>
+    <div class="click">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" height="20"
+            width="20"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+            <path fill="currentColor"
+                d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z" />
+        </svg>
+    </div>
+</div>
 <script src="src/project.js"></script>
