--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -14,7 +14,7 @@
     Repellendus perferendis beatae doloremque! Vel, suscipit quas qui temporibus veritatis natus eos commodi cum?</p>
 
 <div class="totalproject">
-    <div class="click">
+    <div class="click prev">
         <svg xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 448 512" height="20"
             width="20"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
@@ -24,7 +24,7 @@
     </div>
     <section class="project-container">
     </section>
-    <div class="click">
+    <div class="click next">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" height="20"
             width="20"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
             <path fill="currentColor"
