comment styles.css

--- a/views/title.ejs
+++ b/views/title.ejs
@@ -1,4 +1,4 @@
- <h1 class="blob-content">Welcome to My Website</h1>
+ <h1 class="blob-title">Welcome to My Website</h1>
 
 <div class="blob-wrapper">
     <svg xmlns="http://www.w3.org/2000/svg">
