--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -410,6 +410,21 @@ footer{
     border:2px solid #ff0095;
 }
 
+ /* blog card link */
+
+.cards-link{
+    text-decoration:none;
+    color: inherit;
+    transition: color 0.3s;
+    margin-top: auto;
+}
+
+/* blog card link on hover */
+
+.cards-link:hover{
+    color: #ff0095;
+}
+
 /* projects section*/
 
 /* fourth section specification */
@@ -599,6 +614,69 @@ footer{
     width: calc(119% + 1.3px);
     height: 25rem;
 }
+
+
+/* blog content  */
+
+
+/* navbar */
+.blog-nav{
+    display:flex;
+    justify-content: center;
+    width: 100%;
+    height: 3rem;
+    top:0;
+    background-color: white;
+    box-shadow:0px 1px 5px rgba(0,0,0,0.3);
+    z-index: 1000;
+    color:black;
+
+    /* nav item */
+    .blog-logo{
+        font-family: "Poppins", sans-serif;
+        font-weight: 600;
+        display: flex;
+        height: 100%;
+        font-size:1.5rem;
+        align-items: center;
+        justify-content: center;
+
+        a{
+            text-decoration: none;
+            color: black;
+        }
+    }
+
+}
+
+.blog-total{
+    height:100vh;
+    margin: 0 20% 0 20%;
+    color:black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: "Poppins", sans-serif;
+
+    .blog-title{
+        height: 4rem;
+        width: auto;
+        font-size: 2.5rem;
+        margin-bottom: 5rem;
+        margin-top: 5rem;
+        font-weight: 700;
+    }
+
+    .blog-content{
+        padding:5px;
+        width: auto;
+        font-size: 1.1rem;
+        line-height: 2.1rem;
+    }
+
+
+}
+
 
 
 
